# AC_CV

./: .gitignore  README.md
ChampClassification/: .gitignore  assisted_sort.py  count_data.py  create_champ_folders.py  create_val.py  finetune_ResNET.py  get_champ_images.py  manual_sort.py  run_on_window.py
ChampDetection/: .gitignore  creating_dataset.py  test_model.py  view_dataset.py
ac-client/: CMakeLists.txt
ac-client/src/: CMakeLists.txt  getwindow.cpp  main.cpp  overlayrect.cpp  overlayrect.h  shop.cpp  shop.h  test_main.cpp
ac-client/src/elements/: CMakeLists.txt  Header1.h  ImageRegion.cpp  ImageRegion.h  buttons.cpp  buttons.h  champnames.cpp  champnames.h  champslots.cpp  champslots.h  gold.cpp  gold.h  levelinfo.cpp  levelinfo.h  shopsplit.cpp  shopsplit.h  testing.cpp
ac-client/src/ocr/: CMakeLists.txt  ocr.h  tesseractOcr.cpp  tesseractOcr.h
